<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    tools:context=".PersonalDetails">

    <EditText
        android:id="@+id/etNameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:background="@color/white"
        android:hint="@string/btn_enter_name" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/etNameInput"
        android:background="@color/white"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/etPhoneNumber"
        android:background="@color/white"
        android:hint="@string/btn_enter_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/etEmail"
        android:id="@+id/btnSavePersonalDetails"
        android:text="@string/btn_save_details"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSavePersonalDetails"
        android:text="@string/btn_cancel"
        android:id="@+id/btnCancelPersonalDetails"/>

</RelativeLayout>