<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".Experience">

    <EditText
        android:id="@+id/etExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="100dp"
        android:layout_marginStart="50dp"
        android:background="@color/white"
        android:hint="@string/btn_enter_experience_details"
        android:minHeight="48dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etExperience"
        android:id="@+id/btnSaveExperience"
        android:text="@string/btn_save_details"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSaveExperience"
        android:text="@string/btn_cancel"
        android:id="@+id/btnCancelExperience"/>

</RelativeLayout>